feat: implement GET /apps/{appId}/users
